# PortfolioPrediction

./: DEVELOPER.md  README.md  app.py  deploy.sh  experiments.py  freeze.py  full_experiment_results.csv  graph.py  ideas.md  main.py  metrics.py  nifty50_data.csv  optimizer.py  portfolio.py  predict.py  pyproject.toml  utils.py
data/: .~lock.SBIN.max.csv#  ADANIENT.max.csv  ADANIPORTS.max.csv  APOLLOHOSP.max.csv  ASIANPAINT.max.csv  AXISBANK.max.csv  BAJAJ-AUTO.max.csv  BAJAJFINSV.max.csv  BAJFINANCE.max.csv  BEL.max.csv  BHARTIARTL.max.csv  CIPLA.max.csv  COALINDIA.max.csv  DRREDDY.max.csv  EICHERMOT.max.csv  ETERNAL.max.csv  GRASIM.max.csv  HCLTECH.max.csv  HDFCBANK.max.csv  HDFCLIFE.max.csv  HINDALCO.max.csv  HINDUNILVR.max.csv  ICICIBANK.max.csv  INDIGO.max.csv  INFY.max.csv  ITC.max.csv  JIOFIN.max.csv  JSWSTEEL.max.csv  KOTAKBANK.max.csv  LT.max.csv  M&M.max.csv  MARUTI.max.csv  MAXHEALTH.max.csv  NESTLEIND.max.csv  NTPC.max.csv  ONGC.max.csv  POWERGRID.max.csv  RELIANCE.max.csv  SBILIFE.max.csv  SBIN.max.csv  (+11 more)
docs/: index.html
docs/static/: style.css
static/: portfolio_frontier.html  style.css
static/js/: forms.js
templates/: about.html  base.html  index.html  info.html
templates/forms/: mean_variance.html  return_opt.html  risk_metric.html  risk_opt.html  tabs.html  train_test_inputs.html
templates/partials/: graphs.html  results.html  stats_table.html
