[project]
name = "portfolioprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "flask>=3.1.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "pydantic>=2.12.4",
    "pyportfolioopt>=1.5.6",
    "scipy>=1.16.3",
    "waitress>=3.0.2",
    "yfinance>=0.2.66",
]
